[package]
name = "basic"
version = "0.1.0"
authors = ["devg1120 <devg1120@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix-lua = "0.7"
#actix = "0.7"
#futures = "*"
#actix-lua = { git = "https://github.com/geofmureithi/actix-lua" }
actix-lua = { path = "../.." }
actix = "0.9"
actix-rt = "*"
futures = "0.3"
tokio = "0.2"
rlua = "0.17"
